# Projet2

./: huggingface_api_cloth_seg.ipynb  notes.txt  pyproject.toml
